# fut2d-cross

FCP_GPR_2020/: 20200821214656-FCP_GPR_2018NS_0-vs-HELIOS_base_0.rcg  20200821214656-FCP_GPR_2018NS_0-vs-HELIOS_base_0.rcl  20200821222350-FCP_GPR_2018NS_0-vs-HELIOS_base_0.rcl  20200827223914-FCP_GRP_2-vs-HELIOS_base_0.rcl  20200827224254-HELIOS_base_0-vs-null.rcg  20200827224254-HELIOS_base_0-vs-null.rcl  20200827225314-HELIOS_base_0-vs-null.rcg  20200827225314-HELIOS_base_0-vs-null.rcl  20200827225341-null-vs-null.rcg  20200925204935-FCP_GRP_0-vs-null.rcg  20200925204935-FCP_GRP_0-vs-null.rcl  G2dPatchFCPortugalSetplays2019  Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  teste.conf  teste.conf.20200721-211431
FCP_GPR_2020/autom4te.cache/: output.0  requests  traces.0
FCP_GPR_2020/src/: 20200714202333-HELIOS_base_0-vs-null.rcg  20200714202333-HELIOS_base_0-vs-null.rcl  Makefile  Makefile.am  Makefile.in  bhv_basic_move.cpp  bhv_basic_tackle.cpp  bhv_penalty_kick.cpp  bhv_penalty_kickNEW.cpp  cbr.conf  coach.conf  fcportugal_context.cpp  fcportugal_context.h  fcportugal_setplay_exception.h  fcportugal_setplay_player.cpp  fcportugal_setplay_player.h  files.txt  listagem_FCP.txt  main_fcportugal_setplay_player.cpp  neck_default_intercept_neck.cpp  neck_offensive_intercept_neck.cpp  player.conf  role_fcportugal_setplay.cpp  role_fcportugal_setplay.h  sample_coach  sample_field_evaluator.cpp  sample_field_evaluator.h  sample_player.cpp  sample_trainer  setplay.conf  start  start.sh  start.sh.in  strategy.cpp
FCP_GPR_2020/src/.deps/: fcportugal_setplay_player-actgen_cross.Po  fcportugal_setplay_player-actgen_direct_pass.Po  fcportugal_setplay_player-actgen_self_pass.Po  fcportugal_setplay_player-actgen_shoot.Po  fcportugal_setplay_player-actgen_short_dribble.Po  fcportugal_setplay_player-actgen_simple_dribble.Po  fcportugal_setplay_player-actgen_strict_check_pass.Po  fcportugal_setplay_player-action_chain_graph.Po  fcportugal_setplay_player-action_chain_holder.Po  fcportugal_setplay_player-bhv_basic_move.Po  fcportugal_setplay_player-bhv_basic_offensive_kick.Po  fcportugal_setplay_player-bhv_basic_tackle.Po  fcportugal_setplay_player-bhv_chain_action.Po  fcportugal_setplay_player-bhv_custom_before_kick_off.Po  fcportugal_setplay_player-bhv_go_to_static_ball.Po  fcportugal_setplay_player-bhv_goalie_basic_move.Po  fcportugal_setplay_player-bhv_goalie_chase_ball.Po  fcportugal_setplay_player-bhv_goalie_free_kick.Po  fcportugal_setplay_player-bhv_normal_dribble.Po  fcportugal_setplay_player-bhv_pass_kick_find_receiver.Po  fcportugal_setplay_player-bhv_penalty_kick.Po  fcportugal_setplay_player-bhv_prepare_set_play_kick.Po  fcportugal_setplay_player-bhv_set_play.Po  fcportugal_setplay_player-bhv_set_play_free_kick.Po  fcportugal_setplay_player-bhv_set_play_goal_kick.Po  fcportugal_setplay_player-bhv_set_play_indirect_free_kick.Po  fcportugal_setplay_player-bhv_set_play_kick_in.Po  fcportugal_setplay_player-bhv_set_play_kick_off.Po  fcportugal_setplay_player-bhv_strict_check_shoot.Po  fcportugal_setplay_player-bhv_their_goal_kick_move.Po  fcportugal_setplay_player-body_force_shoot.Po  fcportugal_setplay_player-clear_ball.Po  fcportugal_setplay_player-clear_generator.Po  fcportugal_setplay_player-cooperative_action.Po  fcportugal_setplay_player-cross_generator.Po  fcportugal_setplay_player-dribble.Po  fcportugal_setplay_player-fcportugal_context.Po  fcportugal_setplay_player-fcportugal_setplay_player.Po  fcportugal_setplay_player-field_analyzer.Po  fcportugal_setplay_player-hold_ball.Po  (+39 more)
fcportugalsetplays-code/: AUTHORS  TODO  config.status
fcportugalsetplays-code/.deps/: lib_libsetplay_a-arithop.Po  lib_libsetplay_a-cbr.Po  lib_libsetplay_a-clangaction.Po  lib_libsetplay_a-clangutil.Po  lib_libsetplay_a-compop.Po  lib_libsetplay_a-cond.Po  lib_libsetplay_a-directive.Po  lib_libsetplay_a-namesubstitutions.Po  lib_libsetplay_a-object.Po  lib_libsetplay_a-parameter.Po  lib_libsetplay_a-playerReference.Po  lib_libsetplay_a-region.Po  lib_libsetplay_a-setplay.Po  lib_libsetplay_a-setplaymanager.Po  lib_libsetplay_a-setplaymessage.Po  lib_libsetplay_a-util.Po  lib_libsetplay_a-visitor.Po
fcportugalsetplays-code/setplay/: cbr.cc  setplay  setplaymanager.cc  simpleParsers.h
fcportugalsplanner-code/AllSetPlay/: AllSetPlay.pro  Makefile  TODO  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_spplayertabinformation.cpp  setplay.conf
fcportugalsplanner-code/AllSetPlay/issues/: ISSUES
fcportugalsplanner-code/AllSetPlay/rc2011/: CornerKick.conf  KeaperCatch.conf
fcportugalsplanner-code/AllSetPlay/setPlayGUI/: spaction.cpp  spaction.h  spdefinitions.h  spfield.cpp  spfield.h  spgraph.cpp  spgraph.h  spinitdialog.cpp  spinitdialog.h  spinitdialog.ui  spoutprogram.cpp  spoutprogram.h  spplayer.cpp  spplayer.h  spplayereditordialog.cpp  spplayereditordialog.h  spplayereditordialog.ui  sppoint.cpp  sppoint.h  spporting.cpp  spporting.h  sprelativepositiondialog.ui  spsetplay.cpp  spsetplay.h  spsetplay.ui  spshowgame.cpp  spshowgame.h  spstep.cpp  spstep.h  sptransition.cpp  sptransition.h
fcportugalsplanner-code/AllSetPlay/setplay/: cbr.h  cbrunittest.cc  clangaction.cc  clangaction.h  cond.cc  cond.h  config.h  directive.cc  directive.h  functions.cpp  functions.h  namesubstitutions.cc  namesubstitutions.h  object.cc  object.h  parameter.cc  (+13 more)
(+36 files in other folders)
